--- a/WebApplication2/Views/Shared/_Layout.cshtml
+++ b/WebApplication2/Views/Shared/_Layout.cshtml
@@ -298,7 +298,8 @@
         </nav>
     </header> *@
 
-    <div>@RenderBody()
+    <div style="margin-top:3px;">
+        @RenderBody()
     </div>
             
 
