--- a/WebApplication2/Views/Instructor/Index.cshtml
+++ b/WebApplication2/Views/Instructor/Index.cshtml
@@ -14,10 +14,12 @@
         <partial name="_NotificationPartial"></partial>
     TempData.Remove("Success");
 }
+
    
 @{
     Layout = "_Layout";
 }
+
 
 <head>
     <style>
@@ -245,10 +247,34 @@
 </head>
     <!-- Page Content -->
     <!-- Banner Starts Here -->
+@if (TempData.ContainsKey("msg"))
+{
+    <div class="alert alert-danger alert-dismissible fade show " role="alert" style="padding: 1rem 1rem;
+    margin-bottom: 1rem;
+    border: 1px solid transparent;
+    border-radius: .25rem;
+    position: absolute;
+    margin-top: 86px;
+    z-index: 99999;
+  width:100%;
+text-align:center;
+
+    
+    ">
+        @TempData["msg"]
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+
+        
+
+    </div>
+}
     <div class="banner header-text">
       <div class="owl-banner owl-carousel">
+       
         <div class="banner-item-01">
+           
           <div class="text-content">
+                
             <h4>Best Courses</h4>
             <h2>Don not waste your time, search and find The best courses</h2>
           </div>
