editing student registeration

--- a/WebApplication2/Views/Account/StudentRegister/Step2.cshtml
+++ b/WebApplication2/Views/Account/StudentRegister/Step2.cshtml
@@ -188,6 +188,7 @@
                                     <select asp-for="CategoryId" asp-items="@CategoriesList">
                                         <option value="">Choose a Category</option>
                                     </select>
+                                    <span asp-validation-for="CategoryId" class="text-danger"></span>
                     </div>
 
 
