edition on profiles

--- a/WebApplication2/Views/Instructor/MyCourses.cshtml
+++ b/WebApplication2/Views/Instructor/MyCourses.cshtml
@@ -219,7 +219,7 @@
 
 
                                 }
-                                (3, 666)
+                            (@course.Reviews.Count().ToString())
                             </p>
                             <p class="meta">@course.CourseDuration total hours • @course.Level</p>
                             <p class="price">
