--- a/WebApplication2/Views/Student/Profile.cshtml
+++ b/WebApplication2/Views/Student/Profile.cshtml
@@ -99,9 +99,9 @@
 
 
             <p>
-                <span class="text-black"><i class="fa fa-comment"></i></span> 28,707 Reviews
+                <span class="text-black"><i class="fa fa-comment"></i></span> @Model.Reviews.Count reviews
                 <br />
-                <span class="text-black"><i class="fa fa-book"></i></span> 8 Courses
+                <span class="text-black"><i class="fa fa-book"></i></span> @Model.ContributionNum courses
                 <br />
                 <span class="text-black"><i class="fa fa-male icon"></i></span> @Model.Gender
 
