--- a/WebApplication2/Areas/Admin/Views/Homee/Report.cshtml
+++ b/WebApplication2/Areas/Admin/Views/Homee/Report.cshtml
@@ -46,7 +46,7 @@
                                 </button>
                                 <div class="dropdown-menu dropdown-menu-right"
                                      aria-labelledby="dropdownMenuButton1">
-                                    <a class="dropdown-item" asp-controller="report" asp-action="editreport" asp-route-Id="@report.ReportId">Update</a>
+                                   @*  <a class="dropdown-item" asp-controller="report" asp-action="editreport" asp-route-Id="@report.ReportId">Update</a> *@
                                     <a class="dropdown-item" asp-controller="report" asp-action="delete" asp-route-Id="@report." onclick="return confirm('Are you sure you want to delete this report?');">Delete</a>
                                 </div>
                             </div>
