--- a/WebApplication2/Views/Review/EditReview.cshtml
+++ b/WebApplication2/Views/Review/EditReview.cshtml
@@ -239,6 +239,8 @@
 
                             <div class="col-lg-12">
                                 <fieldset>
+                                    
+                                    <button asp-action="profile" asp-controller="student" class="filled-button">Back </button>
                                     <button type="submit" id="form-submit" class="filled-button">Send </button>
                                 </fieldset>
                             </div>
