--- a/WebApplication2/Views/Course/filter2.cshtml
+++ b/WebApplication2/Views/Course/filter2.cshtml
@@ -250,12 +250,12 @@
                 <div class="col-md-6">
                     <button class="btn btn-light">Filter <span id="filter-count">0</span></button>
                 </div>
-                <div class="col-md-6 text-right">
+                @* <div class="col-md-6 text-right">
                     <select class="custom-select">
                         <option value="most-relevant">Sort by Most Relevant</option>
                     </select>
                     <a href="#" class="btn btn-link text-purple d-none" id="clear-filters">Clear filters</a>
-                </div>
+                </div> *@
             </div>
             <h2 id="results-count"> @ViewBag.recordCount  results</h2>
             <div id="course-list">
